css overflow correction

--- a/src/js/components/tablero/tablero.scss
+++ b/src/js/components/tablero/tablero.scss
@@ -152,8 +152,7 @@
   }
 
   .contentCard {
-    height: 100%;
-    overflow-y: auto;
+    height: 80%;
 
     .dataFilter {
       margin: -15px 0 5px 0;
@@ -183,6 +182,64 @@
     .dataFilter .disabled{
       opacity: 0;
       cursor: default;
+    }
+
+    .tableCard {
+      align-items: flex-end;
+  
+      table {
+        font-family: arial, sans-serif;
+        width: 100%;
+        display: block;
+        height: 100%;
+        overflow-y: auto;
+        margin-top: 10px;
+  
+        td, th {
+          border-bottom: 1px solid #dddddd;
+          text-align: left;
+          padding: 8px;
+        }
+        
+        thead {
+          object-fit: contain;
+          font-size: 13px;
+          font-weight: 500;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: 1.42;
+          letter-spacing: normal;
+          color: #909090;
+        
+          .small-text {
+            font-size: 11px;
+          }
+        }
+        
+        tbody {
+          object-fit: contain;
+          font-size: 13px;
+          font-weight: normal;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: normal;
+          letter-spacing: normal;
+          color: #2d2d2d;
+        
+          &:hover {
+            background-color: #fbfbfb;
+          }
+        }
+        
+        .tableLink {
+          color: #282D32;
+          
+          &:hover {
+            cursor: pointer;
+            color: #282D32;
+          }
+        }
+      }
     }
 
     .loaderDiv {
@@ -486,55 +543,5 @@
         }
       }
     }
-  }
-}
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td, th {
-  border-bottom: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-thead {
-  object-fit: contain;
-  font-size: 13px;
-  font-weight: 500;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.42;
-  letter-spacing: normal;
-  color: #909090;
-
-  .small-text {
-    font-size: 11px;
-  }
-}
-
-tbody {
-  object-fit: contain;
-  font-size: 13px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #2d2d2d;
-
-  &:hover {
-    background-color: #fbfbfb;
-  }
-}
-
-.tableLink {
-  color: #282D32;
-  
-  &:hover {
-    cursor: pointer;
-    color: #282D32;
   }
 }
